# test-etl

./: .gitignore  .pre-commit-config.yaml  README.md  auth.py  justfile  main.py  pyproject.toml  test_auth.py  test_main.py
.github/workflows/: ci.yaml
