[project]
name = "test-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.10.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

[tool.ruff.lint]
extend-select = [
    "A", # flake8-builtins
    "I", # isort
    "ICN002", # flake8-import-conventions.banned-aliases
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-import-conventions.banned-aliases]
"altair" = ["alt"]
"pandas" = ["pd"]
